--- a/manifest.json
+++ b/manifest.json
@@ -3,32 +3,32 @@
     "short_name": "Notes",
     "icons": [
         {
-            "src": "img/icons/icon-128x128.png",
+            "src": "https://carlosmarian.github.io/SchoolOfNet_PWA/img/icons/icon-128x128.png",
             "sizes": "128x128",
             "type": "image/png"
         }, {
-          "src": "img/icons/icon-144x144.png",
+          "src": "https://carlosmarian.github.io/SchoolOfNet_PWA/img/icons/icon-144x144.png",
           "sizes": "144x144",
           "type": "image/png"
         }, {
-          "src": "img/icons/icon-152x152.png",
+          "src": "https://carlosmarian.github.io/SchoolOfNet_PWA/img/icons/icon-152x152.png",
           "sizes": "152x152",
           "type": "image/png"
         }, {
-          "src": "img/icons/icon-192x192.png",
+          "src": "https://carlosmarian.github.io/SchoolOfNet_PWA/img/icons/icon-192x192.png",
           "sizes": "192x192",
           "type": "image/png"
         }, {
-          "src": "img/icons/icon-256x256.png",
+          "src": "https://carlosmarian.github.io/SchoolOfNet_PWA/img/icons/icon-256x256.png",
           "sizes": "256x256",
           "type": "image/png"
         }, {
-          "src": "img/icons/icon-512x512.png",
+          "src": "https://carlosmarian.github.io/SchoolOfNet_PWA/img/icons/icon-512x512.png",
           "sizes": "512x512",
           "type": "image/png"
         }],
-    "start_url": "index.html",
-    "display": "standalone",
+    "start_url": "https://carlosmarian.github.io/SchoolOfNet_PWA/index.html",
+    "display"; : "fullscreen",
     "background_color": "#607d8b",
     "theme_color": "#607d8b",
     "gsm_sender_id": "103953800507",
